fix: set header as sticky position - resolve z-index issue with message component under maincontent

--- a/.dev/src/media/main.css
+++ b/.dev/src/media/main.css
@@ -130,7 +130,7 @@
       }
 
       h2 {
-        @apply mb-4 pl-5 text-2xl max-md:mt-2 max-md:mb-2 max-md:pl-4 max-md:text-xl;
+        @apply mb-4 pl-5 text-2xl max-md:mb-2 max-md:pl-4 max-md:text-xl;
       }
 
       h3 {
@@ -179,7 +179,7 @@
 @layer components {
   @layer layout {
     header {
-      @apply fixed top-0 right-0 left-0 z-50 flex h-14 items-center justify-between bg-white/5 px-6 py-3 backdrop-blur-xl backdrop-saturate-150 transition-all duration-300 hover:bg-white/15 hover:shadow-lg max-md:bg-white/10 max-md:px-4 max-md:py-2 max-md:backdrop-blur-xl max-md:backdrop-saturate-150 dark:bg-gray-900/90 dark:hover:bg-gray-800/95 dark:hover:from-gray-900 dark:hover:via-gray-800 dark:hover:to-gray-900 dark:hover:shadow-black/30 max-md:dark:bg-gray-900/95;
+      @apply sticky top-0 z-50 mb-2 flex h-14 items-center justify-between bg-white/5 px-6 py-3 backdrop-blur-xl backdrop-saturate-150 transition-all duration-300 hover:bg-white/15 hover:shadow-lg max-md:bg-white/10 max-md:px-4 max-md:py-2 max-md:backdrop-blur-xl max-md:backdrop-saturate-150 dark:bg-gray-900/90 dark:hover:bg-gray-800/95 dark:hover:from-gray-900 dark:hover:via-gray-800 dark:hover:to-gray-900 dark:hover:shadow-black/30 max-md:dark:bg-gray-900/95;
 
       .brand {
         @apply hover:text-aurora-sky dark:hover:text-aurora-teal-400 inline-block flex-shrink-0 text-xl font-semibold tracking-tight text-slate-900 no-underline transition-all duration-200 hover:-translate-y-0.5 max-md:order-1 max-md:flex-1 max-md:text-lg dark:text-slate-100;
@@ -291,7 +291,7 @@
     }
 
     #maincontent {
-      @apply relative top-14 mx-auto min-h-[calc(100vh-3.5rem)] w-11/12 max-w-6xl overflow-auto px-4 max-md:w-full max-md:px-3;
+      @apply relative mx-auto min-h-[calc(100vh-4rem)] w-11/12 max-w-6xl overflow-auto px-4 max-md:w-full max-md:px-3;
 
       #view {
         @apply mx-0 mb-2 w-full p-0 shadow-none transition-all duration-300 empty:hidden md:mb-6 md:rounded-4xl md:border md:border-slate-400/20 md:bg-gradient-to-br md:from-white/95 md:via-white/90 md:to-white/85 md:p-6 md:shadow-xl md:backdrop-blur-xl md:backdrop-saturate-150 md:hover:border-slate-400/30 md:hover:shadow-2xl md:hover:shadow-slate-400/30 md:dark:border-gray-600/30 md:dark:from-gray-900/95 md:dark:via-gray-800/90 md:dark:to-gray-900/85 md:dark:shadow-black/50 md:dark:hover:border-gray-500/40 md:dark:hover:shadow-black/60;
@@ -822,9 +822,12 @@
         }
 
         & > div {
-          @apply w-full space-y-2.5 max-md:space-y-1.5;
+          @apply flex w-full space-y-2.5 max-md:space-y-1.5;
           td & {
             @apply max-md:w-auto max-md:flex-1 max-md:space-y-1;
+          }
+          & .ifacebadge {
+            @apply flex-1;
           }
         }
 
